# serializer version: 1
# name: test_auth_error
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'app_key',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'app_secret',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'phone',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'password',
        'required': True,
        'type': 'string',
      }),
    ]),
    'description_placeholders': dict({
      'code': 'AUTH_ERROR',
    }),
    'errors': dict({
      'base': 'auth_error',
    }),
    'flow_id': <ANY>,
    'handler': 'duwi',
    'last_step': None,
    'preview': None,
    'step_id': 'user',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_auth_success_but_no_houses_found
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'house_no',
        'options': list([
        ]),
        'required': True,
        'type': 'select',
      }),
    ]),
    'description_placeholders': dict({
    }),
    'errors': dict({
      'base': 'no_houses_found_error',
    }),
    'flow_id': <ANY>,
    'handler': 'duwi',
    'last_step': None,
    'preview': None,
    'step_id': 'select_house',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_fetch_house_info_error
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'app_key',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'app_secret',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'phone',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'password',
        'required': True,
        'type': 'string',
      }),
    ]),
    'description_placeholders': dict({
      'code': '10001',
    }),
    'errors': dict({
      'base': 'fetch_house_info_error',
    }),
    'flow_id': <ANY>,
    'handler': 'duwi',
    'last_step': None,
    'preview': None,
    'step_id': 'user',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_invalid_auth_error
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'app_key',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'app_secret',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'phone',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'password',
        'required': True,
        'type': 'string',
      }),
    ]),
    'description_placeholders': dict({
      'code': '11000',
    }),
    'errors': dict({
      'base': 'invalid_auth',
    }),
    'flow_id': <ANY>,
    'handler': 'duwi',
    'last_step': None,
    'preview': None,
    'step_id': 'user',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_invalid_sys_error
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'app_key',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'app_secret',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'phone',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'password',
        'required': True,
        'type': 'string',
      }),
    ]),
    'description_placeholders': dict({
      'code': '10001',
    }),
    'errors': dict({
      'base': 'sys_error',
    }),
    'flow_id': <ANY>,
    'handler': 'duwi',
    'last_step': None,
    'preview': None,
    'step_id': 'user',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_no_houses_found_after_auth
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'house_no',
        'options': list([
        ]),
        'required': True,
        'type': 'select',
      }),
    ]),
    'description_placeholders': dict({
    }),
    'errors': dict({
      'base': 'no_houses_found_error',
    }),
    'flow_id': <ANY>,
    'handler': 'duwi',
    'last_step': None,
    'preview': None,
    'step_id': 'select_house',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_sys_error
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'app_key',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'app_secret',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'phone',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'password',
        'required': True,
        'type': 'string',
      }),
    ]),
    'description_placeholders': dict({
      'code': '10001',
    }),
    'errors': dict({
      'base': 'sys_error',
    }),
    'flow_id': <ANY>,
    'handler': 'duwi',
    'last_step': None,
    'preview': None,
    'step_id': 'user',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_user_flow_failed_by_phone_auth
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'app_key',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'app_secret',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'phone',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'password',
        'required': True,
        'type': 'string',
      }),
    ]),
    'description_placeholders': dict({
      'code': '11000',
    }),
    'errors': dict({
      'base': 'invalid_auth',
    }),
    'flow_id': <ANY>,
    'handler': 'duwi',
    'last_step': None,
    'preview': None,
    'step_id': 'user',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_user_flow_success
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'app_key',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'app_secret',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'phone',
        'required': True,
        'type': 'string',
      }),
      dict({
        'name': 'password',
        'required': True,
        'type': 'string',
      }),
    ]),
    'description_placeholders': dict({
    }),
    'errors': dict({
    }),
    'flow_id': <ANY>,
    'handler': 'duwi',
    'last_step': None,
    'preview': None,
    'step_id': 'user',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_user_flow_success.1
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'house_no',
        'options': list([
          tuple(
            'mocked_house_no1',
            'mocked_house_name1',
          ),
          tuple(
            'mocked_house_no2',
            'mocked_house_name2',
          ),
        ]),
        'required': True,
        'type': 'select',
      }),
    ]),
    'description_placeholders': dict({
    }),
    'errors': dict({
    }),
    'flow_id': <ANY>,
    'handler': 'duwi',
    'last_step': None,
    'preview': None,
    'step_id': 'select_house',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_user_flow_success.2
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
    }),
    'data': dict({
      'access_token': None,
      'address': 'https://openapi.duwi.com.cn/homeApi/v1',
      'app_key': 'correct_app_key',
      'app_secret': 'correct_app_secret',
      'house_key': 'mocked_lan_secret_key1',
      'house_name': 'mocked_house_name1',
      'house_no': 'mocked_house_no1',
      'password': 'correct_password',
      'phone': 'correct_phone',
      'refresh_token': None,
      'ws_address': 'wss://openws.duwi.com.cn:32013',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'duwi',
    'minor_version': 1,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'access_token': None,
        'address': 'https://openapi.duwi.com.cn/homeApi/v1',
        'app_key': 'correct_app_key',
        'app_secret': 'correct_app_secret',
        'house_key': 'mocked_lan_secret_key1',
        'house_name': 'mocked_house_name1',
        'house_no': 'mocked_house_no1',
        'password': 'correct_password',
        'phone': 'correct_phone',
        'refresh_token': None,
        'ws_address': 'wss://openws.duwi.com.cn:32013',
      }),
      'disabled_by': None,
      'domain': 'duwi',
      'entry_id': <ANY>,
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'title': 'mocked_house_name1',
      'unique_id': None,
      'version': 1,
    }),
    'title': 'mocked_house_name1',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
